frontend/test/context/success/globaldefref.fc
int g = 1;

int foo() {
    return g;
}
