frontend/test/context/error/shadow-function-with-globaldef.fc
void foo() {}

int foo = 1;
